# CppMachineLearning

./: CMakeLists.txt  sources.txt
.github/workflows/: ci.yml
include/Data/: dataloader.h
include/Debug/: gradient_check.h  optimizer_check.h
include/Func/: function.h  std_func.h
include/LinAlg/: tensor.h  tensor_bad.h
include/NN/: layer.h  layer_base.h  model.h  optimizer.h  parameter.h  std_opt.h
include/Rand/: random.h
tests/: CMakeLists.txt
tests/Data/: dataloader_test.cpp
tests/Debug/: gradient_check_test.cpp  optimizer_check_test.cpp
tests/Func/: std_func_gradient_check.cpp  std_func_test.cpp
tests/LinAlg/: tensor_test.cpp
tests/NN/: full_model_test.cpp  layer_test.cpp  model_test.cpp  std_opt_test.cpp
tests/Rand/: random_test.cpp
